appsrc: Make caps set action queued together with buffer

https://bugzilla.gnome.org/show_bug.cgi?id=729760